--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>E-commerce</title>
+    <title>One Ornaments</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
